fix spacing on icon columns in indices

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -7,7 +7,7 @@
 
 .icon-column {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .station-row {
